--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 html,body{
-  font-family: arial;
+  font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
   margin:0px;
   padding:0px;
   background-color: black;
-  color: white;
+  color: #37ff37;
 }
 h1,h2,h3{
   text-align:center;
@@ -21,5 +21,4 @@ nav > a{
   display: block;
   width: auto;
   text-decoration: none;
-  color: #37ff37;
 }
