--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,11 @@ article{
   padding:0px;
   color: #37ff37 !important;
 }
+header{
+  height:auto;
+}
 nav{
-  position:fixed;
+  position:relative;
   left:0px;
   background-color:black;
 }
