--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ html,body{
   padding:0px;
   background-color: black;
   color: #37ff37 !important;
+  overflow-x: hidden;
 }
 h1,h2,h3{
   text-align:center;
