--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,9 @@ h1,h2,h3{
   text-align:center;
   color: #37ff37 !important;
 }
+#title{
+  font-size:40px;
+}
 article{
   width:100%;
   margin:0px;
