--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html,body{
-  height: 100%;
+  height: 100vh;
   font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
   margin:0px;
   padding:0px;
